# rotato

./: .gitignore  AGENTS.md  README.md  config.yaml.example  pyproject.toml
scripts/: detect_monitors.py  setup_autostart.py
src/rotato/: __init__.py  __main__.py  cache.py  config.py  core.py  images.py  monitors.py  wallpaper.py
src/rotato/platform/: __init__.py  linux.py  windows.py
tests/: __init__.py  test_config.py
