[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rotato"
version = "0.1.0"
description = "A lightweight wallpaper rotation program with multi-monitor support and filtering"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["wallpaper", "desktop", "background", "rotation", "multi-monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]

dependencies = [
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "pywin32>=306; platform_system=='Windows'",
    "keyboard>=0.13.5; platform_system=='Windows'",
    "pystray>=0.19.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
rotato = "rotato.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/rotato"
Repository = "https://github.com/yourusername/rotato"
Issues = "https://github.com/yourusername/rotato/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rotato"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=rotato",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
